Initialization: Scaffolding the posts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,10 @@
   <title>BackboneBlog</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag  'http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js' %>
+  <%= javascript_include_tag  'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js' %>
+  <%= javascript_include_tag  'https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js' %>
+
   <%= csrf_meta_tags %>
 </head>
 <body>
